deploy/azure-wi-webhook-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-wi-webhook-controller-manager
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workload-identity-webhook
      azure-workload-identity.io/system: "true"
      kubernetes.azure.com/managedby: aks
  template:
    metadata:
      labels:
        app: workload-identity-webhook
        azure-workload-identity.io/system: "true"
        kubernetes.azure.com/managedby: aks
    spec:
      containers:
        - name: manager
          image: mcr.microsoft.com/oss/azure/workload-identity/webhook:v1.1.0 # Use the correct image version for your cluster
          ports:
            - containerPort: 9443
              name: webhook-server
          # ...other container settings as needed...
      # ...other pod spec settings as needed...
