deploy/azure-wi-webhook-webhook-service.yml
# This is a sample manifest for the webhook service
apiVersion: v1
kind: Service
metadata:
  name: azure-wi-webhook-webhook-service
  namespace: kube-system
spec:
  selector:
    app: workload-identity-webhook
    azure-workload-identity.io/system: "true"
    kubernetes.azure.com/managedby: aks
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: webhook-server
