deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talking-points-frontend
spec:
  selector:
    matchLabels:
      app: talking-points-frontend
  template:
    metadata:
      labels:
        app: talking-points-frontend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: backend-identity
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: frontend
          image: starterpackregistry.azurecr.io/talking-points-frontend:latest
          ports:
            - containerPort: 3000
              name: http-frontend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: talking-points-service
spec:
  type: LoadBalancer
  selector:
    app: talking-points-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http-frontend
    - protocol: TCP
      port: 443
      targetPort: 3000
      name: https-frontend
