deploy/talking-points-backend-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talking-points-backend
spec:
  selector:
    matchLabels:
      app: talking-points-backend
  template:
    metadata:
      labels:
        app: talking-points-backend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: backend-identity
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: backend
          image: starterpackregistry.azurecr.io/talking-points-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-backend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: talking-points-backend
spec:
  type: ClusterIP
  selector:
    app: talking-points-backend
  ports:
    - protocol: TCP
      port: 8080
    - containerPort: 8080
      name: http-backend
    - containerPort: 4020
      name: vsdbg
